<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/bankData"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:baselineAlignBottom="true"
                    android:src="@drawable/bitcoin_2x_1x" />


            </LinearLayout>

            <EditText
                android:id="@+id/bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:ems="10"
                android:hint="@string/bankEn" />


            <EditText
                android:id="@+id/ccn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView"
                android:ems="10"
                android:hint="@string/accNoEn" />


            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView2"
                android:ems="10"
                android:hint="@string/pinEn" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/emailData"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:baselineAlignBottom="true"
                    android:src="@drawable/gmail" />

            </LinearLayout>


            <EditText
                android:id="@+id/emailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailEn"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/emailPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailPwdEn"
                android:inputType="textPersonName" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_signup"
                android:text="@string/btnSave" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_login"
                android:text="@string/btnView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/viewemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_login"
                android:text="@string/btnemailView" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
